feat: enrich filter option endpoint